feat(root): 依赖支持 helm

--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
@@ -425,7 +425,17 @@ spec:
               dependency:
                 description: Dependency components
                 items:
-                  type: string
+                  properties:
+                    kind:
+                      description: Kind of the referenced object.
+                      type: string
+                    name:
+                      description: Name of the referenced object.
+                      type: string
+                  required:
+                    - kind
+                    - name
+                  type: object
                 type: array
               nodeSelector:
                 additionalProperties:
