refactor(root): 修改 kind 为枚举

--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
@@ -426,6 +426,9 @@ spec:
                   properties:
                     kind:
                       description: Kind of the referenced object.
+                      enum:
+                      - HelmRelease
+                      - ContainerizedWorkload
                       type: string
                     name:
                       description: Name of the referenced object.
