refactor(root): 优化 依赖kind 限制

--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
@@ -428,6 +428,10 @@ spec:
                   properties:
                     kind:
                       description: Kind of the referenced object.
+                      enum:
+                        - HelmRelease
+                        - ContainerizedWorkload
+                        - Third
                       type: string
                     name:
                       description: Name of the referenced object.
