--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_components.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_components.yaml
@@ -63,10 +63,27 @@ spec:
                       description: Required specifies whether or not a value for this parameter must be supplied when authoring an ApplicationConfiguration.
                       type: boolean
                   required:
-                  - fieldPaths
-                  - name
+                    - fieldPaths
+                    - name
                   type: object
                 type: array
+              persistVolumeClaims:
+                properties:
+                  hostPath:
+                    type: string
+                  name:
+                    description: Name is the name of PVC
+                    type: string
+                  size:
+                    type: string
+                  storageClassName:
+                    type: string
+                  type:
+                    description: type 原则上应该是【枚举，必填】，但是为了向前兼容，不做强制,[HostPath,PVC,StorageClass]
+                    type: string
+                required:
+                  - name
+                type: object
               workload:
                 description: A Workload that will be created for each ApplicationConfiguration that includes this Component. Workload is an instance of a workloadDefinition. We either use the GVK info or a special "type" field in the workload to associate the content of the workload with its workloadDefinition
                 type: object
