--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_applicationconfigurations.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_applicationconfigurations.yaml
@@ -227,13 +227,30 @@ spec:
                             x-kubernetes-embedded-resource: true
                             x-kubernetes-preserve-unknown-fields: true
                         required:
-                        - trait
+                          - trait
                         type: object
                       type: array
                   type: object
                 type: array
+              volumeClaims:
+                items:
+                  properties:
+                    hostPath:
+                      description: type enum:"HostPath,StorageClass", default is StorageClass.
+                      type: string
+                    name:
+                      type: string
+                    size:
+                      type: string
+                    storageClassName:
+                      type: string
+                  required:
+                    - name
+                  type: object
+                type: array
             required:
-            - components
+              - components
+              - volumeClaims
             type: object
           status:
             description: An ApplicationConfigurationStatus represents the observed state of a ApplicationConfiguration.
