--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_volumetraits.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_volumetraits.yaml
@@ -50,18 +50,20 @@ spec:
                           name:
                             type: string
                           path:
-                            description: 容器内路径
+                            type: string
+                          persistentVolumeClaim:
                             type: string
                           size:
                             type: string
                           storageClassName:
                             type: string
                           type:
-                            description: type 原则上应该是【枚举，必填】，但是为了向前兼容，不做强制
+                            description: 下面的字段废弃
                             type: string
                         required:
                         - name
                         - path
+                        - persistentVolumeClaim
                         type: object
                       type: array
                   required:
