refactor(root): 添加 volumeClaims

--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_applicationconfigurations.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_applicationconfigurations.yaml
@@ -236,13 +236,15 @@ spec:
                 items:
                   properties:
                     hostPath:
-                      description: type enum:"HostPath,StorageClass", default is StorageClass.
                       type: string
                     name:
                       type: string
                     size:
                       type: string
                     storageClassName:
+                      type: string
+                    type:
+                      description: type enum:"HostPath,StorageClass", default is StorageClass.
                       type: string
                   required:
                     - name
