refactor(root): 添加 volumeClaims initContainer

--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_volumetraits.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_volumetraits.yaml
@@ -41,24 +41,17 @@ spec:
                   properties:
                     containerIndex:
                       type: integer
+                    isInitContainer:
+                      type: boolean
                     paths:
                       items:
                         description: PathItem define storageClass, size, path, name
                         properties:
-                          hostPath:
-                            type: string
                           name:
                             type: string
                           path:
                             type: string
                           persistentVolumeClaim:
-                            type: string
-                          size:
-                            type: string
-                          storageClassName:
-                            type: string
-                          type:
-                            description: 下面的字段废弃
                             type: string
                         required:
                         - name
