--- a/examples/volumeclaims/sample_component.yaml
+++ b/examples/volumeclaims/sample_component.yaml
@@ -15,3 +15,7 @@ spec:
           ports:
             - containerPort: 80
               name: http
+      initContainers:
+        - name: nginx
+          image: nginx
+          command: [ "ls" ]
