--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_volumeclaims.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_volumeclaims.yaml
@@ -75,7 +75,7 @@ spec:
                   type: object
                 type: array
               latestRevision:
-                description: LatestRevision of component
+                description: LatestRevision of applicationConfig
                 properties:
                   name:
                     type: string
@@ -83,13 +83,36 @@ spec:
                     format: int64
                     type: integer
                 required:
-                - name
-                - revision
+                  - name
+                  - revision
                 type: object
               observedGeneration:
                 description: The generation observed by the component controller.
                 format: int64
                 type: integer
+              resources:
+                description: Resources managed by this canary trait
+                items:
+                  description: A TypedReference refers to an object by Name, Kind, and APIVersion. It is commonly used to reference cluster-scoped objects or objects where the namespace is already known.
+                  properties:
+                    apiVersion:
+                      description: APIVersion of the referenced object.
+                      type: string
+                    kind:
+                      description: Kind of the referenced object.
+                      type: string
+                    name:
+                      description: Name of the referenced object.
+                      type: string
+                    uid:
+                      description: UID of the referenced object.
+                      type: string
+                  required:
+                    - apiVersion
+                    - kind
+                    - name
+                  type: object
+                type: array
             type: object
         type: object
     served: true
