refactor(root): 添加 volume-claim 校验和回收

--- a/charts/oam-kubernetes-runtime/crds/workloaddefinitions.yaml
+++ b/charts/oam-kubernetes-runtime/crds/workloaddefinitions.yaml
@@ -20,3 +20,11 @@ metadata:
 spec:
   definitionRef:
     name: helmreleases.helm.fluxcd.io
+---
+apiVersion: core.oam.dev/v1alpha2
+kind: WorkloadDefinition
+metadata:
+  name: jobs.batch
+spec:
+  definitionRef:
+    name: jobs.batch
