--- a/charts/oam-kubernetes-runtime/templates/oam-controller.yaml
+++ b/charts/oam-kubernetes-runtime/templates/oam-controller.yaml
@@ -4,70 +4,20 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "oam-kubernetes-runtime.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
-  {{- include "oam-kubernetes-runtime.labels" . | nindent 4 }}
-{{- end }}
-
+  {{ include "oam-kubernetes-runtime.labels" . | nindent 4 }}
+  {{- end }}
 ---
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: {{ include "oam-kubernetes-runtime.fullname" . }}
-  labels:
-  {{- include "oam-kubernetes-runtime.labels" . | nindent 4 }}
-aggregationRule:
-  clusterRoleSelectors:
-  - matchLabels:
-      rbac.oam.dev/aggregate-to-controller: "true"
 
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: {{ include "oam-kubernetes-runtime.fullname" . }}:system:aggregate-to-controller
-  labels:
-    {{- include "oam-kubernetes-runtime.labels" . | nindent 4 }}
-    rbac.oam.dev/aggregate-to-controller: "true"
-rules:
-- apiGroups:
-  - core.oam.dev
-  resources:
-  - "*"
-  verbs:
-  - "*"
-- apiGroups:
-  - apps
-  resources:
-  - deployments
-  - controllerrevisions
-  verbs:
-  - "*"
-- apiGroups:
-  - apiextensions.k8s.io
-  resources:
-  - customresourcedefinitions
-  verbs:
-  - "*"
-- apiGroups:
-  - ""
-  resources:
-  - events
-  - services
-  - configmaps
-  verbs:
-  - "*"
-
----
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "oam-kubernetes-runtime.fullname" . }}
-  labels:
-  {{- include "oam-kubernetes-runtime.labels" . | nindent 4 }}
+  name: manager-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "oam-kubernetes-runtime.fullname" . }}
+  name: "cluster-admin"
 subjects:
   - kind: ServiceAccount
     name: {{ include "oam-kubernetes-runtime.serviceAccountName" . }}
@@ -78,9 +28,8 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ include "oam-kubernetes-runtime.fullname" . }}-leader-election
-  labels:
-  {{- include "oam-kubernetes-runtime.labels" . | nindent 4 }}
+  name: leader-election-role
+  namespace: {{ .Release.Namespace }}
 rules:
   - apiGroups:
       - ""
@@ -113,13 +62,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ include "oam-kubernetes-runtime.fullname" . }}-leader-election
-  labels:
-  {{- include "oam-kubernetes-runtime.labels" . | nindent 4 }}
+  name: leader-election-rolebinding
+  namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ include "oam-kubernetes-runtime.fullname" . }}-leader-election
+  name: leader-election-role
 subjects:
   - kind: ServiceAccount
     name: {{ include "oam-kubernetes-runtime.serviceAccountName" . }}
@@ -129,12 +77,13 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "oam-kubernetes-runtime.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "oam-kubernetes-runtime.labels" . | nindent 4 }}
+  {{- include "oam-kubernetes-runtime.labels" . | nindent 4 }}
 spec:
   selector:
     matchLabels:
-      {{- include "oam-kubernetes-runtime.selectorLabels" . | nindent 6 }}
+  {{- include "oam-kubernetes-runtime.selectorLabels" . | nindent 6 }}
   replicas: {{ .Values.replicaCount }}
   template:
     metadata:
@@ -151,7 +100,6 @@ spec:
           args:
             - "--metrics-addr=:8080"
             - "--enable-leader-election"
-            - "--apply-once-only={{ .Values.applyOnceOnly }}"
             {{ if .Values.useWebhook }}
             - "--use-webhook=true"
             - "--webhook-port={{ .Values.webhookService.port }}"
