--- a/examples/sts-configmap/sample_application_config.yaml
+++ b/examples/sts-configmap/sample_application_config.yaml
@@ -13,10 +13,13 @@ spec:
               name: oam-volume-trait
             spec:
               volumeList:
-              - containerIndex: 0
-                paths:
-                - size: 20Gi
-                  path: /var/log/test
-                  storageClassName: alicloud-disk-efficiency
-                  name: path-1
+                - containerIndex: 0
+                  paths:
+                    - path: /var/log/test
+                      name: hp-1
+                      persistentVolumeClaim: hp-1
+  volumeClaims:
+    - type: HostPath
+      hostPath: /data/opt/xxx
+      name: hp-1
 
