feat(root): 添加 资源limit 功能

--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_applicationconfigurations.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_applicationconfigurations.yaml
@@ -372,9 +372,9 @@ spec:
                           description: UID of the referenced object.
                           type: string
                       required:
-                      - apiVersion
-                      - kind
-                      - name
+                        - apiVersion
+                        - kind
+                        - name
                       type: object
                   type: object
                 type: array
@@ -382,6 +382,29 @@ spec:
                 description: The generation observed by the appConfig controller.
                 format: int64
                 type: integer
+              resources:
+                description: Resources managed by this containerised workload.
+                items:
+                  description: A TypedReference refers to an object by Name, Kind, and APIVersion. It is commonly used to reference cluster-scoped objects or objects where the namespace is already known.
+                  properties:
+                    apiVersion:
+                      description: APIVersion of the referenced object.
+                      type: string
+                    kind:
+                      description: Kind of the referenced object.
+                      type: string
+                    name:
+                      description: Name of the referenced object.
+                      type: string
+                    uid:
+                      description: UID of the referenced object.
+                      type: string
+                  required:
+                    - apiVersion
+                    - kind
+                    - name
+                  type: object
+                type: array
               status:
                 description: Status is a place holder for a customized controller to fill if it needs a single place to summarize the status of the entire application
                 type: string
