--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_volumeclaims.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_volumeclaims.yaml
@@ -34,14 +34,13 @@ spec:
             type: object
           spec:
             properties:
-              hostPath:
-                type: string
               size:
                 type: string
               storageClassName:
+                description: HostPath         string `json:"hostPath,omitempty"`
                 type: string
               type:
-                description: type enum:"HostPath,StorageClass", default is StorageClass
+                description: type enum:"StorageClass", default is StorageClass
                 type: string
             type: object
           status:
@@ -83,8 +82,8 @@ spec:
                     format: int64
                     type: integer
                 required:
-                  - name
-                  - revision
+                - name
+                - revision
                 type: object
               observedGeneration:
                 description: The generation observed by the component controller.
@@ -108,9 +107,9 @@ spec:
                       description: UID of the referenced object.
                       type: string
                   required:
-                    - apiVersion
-                    - kind
-                    - name
+                  - apiVersion
+                  - kind
+                  - name
                   type: object
                 type: array
             type: object
