--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_volumetraits.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_volumetraits.yaml
@@ -47,16 +47,30 @@ spec:
                       items:
                         description: PathItem define storageClass, size, path, name
                         properties:
+                          hostPath:
+                            description: Represents a host path mapped into a pod. Host path volumes do not support ownership management or SELinux relabeling.
+                            properties:
+                              path:
+                                description: 'Path of the directory on the host. If the path is a symlink, it will follow the link to the real path. More info: https://kubernetes.io/docs/concepts/storage/volumes#hostpath'
+                                type: string
+                              type:
+                                description: 'Type for HostPath Volume Defaults to "" More info: https://kubernetes.io/docs/concepts/storage/volumes#hostpath'
+                                type: string
+                            required:
+                            - path
+                            type: object
                           name:
+                            description: set volumeMount and volumes link name
                             type: string
                           path:
+                            description: Path is the name of directory in container
                             type: string
                           persistentVolumeClaim:
+                            description: It's either PVC or HostPath
                             type: string
                         required:
                         - name
                         - path
-                        - persistentVolumeClaim
                         type: object
                       type: array
                   required:
