refactor(volumeTrait): 修改 hostPath 不使用pvc 的方式挂载

--- a/examples/volumeclaims/sample_application_config.yaml
+++ b/examples/volumeclaims/sample_application_config.yaml
@@ -24,7 +24,7 @@ spec:
                   paths:
                     - path: /var/log/a
                       name: html-2
-                      persistentVolumeClaim: hp-1
+                      persistentVolumeClaim: sc-2
 
   volumeClaims:
     - type: StorageClass
