feat(root): add  针对hostPort 类型，通过Recreate 策略

--- a/examples/containerized-workload-deploy/sample_component.yaml
+++ b/examples/containerized-workload-deploy/sample_component.yaml
@@ -22,8 +22,10 @@ spec:
           resources:
             cpu:
               required: "60m"
+              limits: "100m"
             memory:
               required: "60Mi"
+              limits: "100Mi"
   parameters:
     - name: instance-name
       required: true
