feat(root): add  annotation force update pods
1. add force update
2. add child resource type

--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
@@ -445,6 +445,9 @@ spec:
                     - name
                   type: object
                 type: array
+              forceUpdateTimestamp:
+                description: ForceUpdateTimestamp
+                type: string
               initContainers:
                 description: InitContainers of which this workload initContainers.
                 items:
@@ -845,6 +848,9 @@ spec:
               serviceMesh:
                 description: check add istio label
                 type: boolean
+              type:
+                description: Type support deployment and statefulSet
+                type: string
             required:
               - containers
             type: object
