--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_volumetraits.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_volumetraits.yaml
@@ -53,10 +53,13 @@ spec:
                             type: string
                           persistentVolumeClaim:
                             type: string
+                          storageClass:
+                            type: string
                         required:
-                        - name
+                          - name
                         - path
                         - persistentVolumeClaim
+                          - storageClass
                         type: object
                       type: array
                   required:
