--- a/examples/containerized-workload-deploy/sample_component.yaml
+++ b/examples/containerized-workload-deploy/sample_component.yaml
@@ -8,6 +8,7 @@ spec:
     apiVersion: core.oam.dev/v1alpha2
     kind: ContainerizedWorkload
     spec:
+      forceUpdateTimestamp: xxxx3
       containers:
         - name: wordpress
           image: wordpress:4.6.1-apache
