fix(root): fix bug NodePort turn to ClusterIP， change port is forbidden

--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_volumetraits.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_volumetraits.yaml
@@ -40,6 +40,8 @@ spec:
                   properties:
                     containerIndex:
                       type: integer
+                    isInitContainer:
+                      type: boolean
                     paths:
                       items:
                         properties:
@@ -65,7 +67,8 @@ spec:
                         type: object
                       type: array
                   required:
-                  - containerIndex
+                    - containerIndex
+                    - isInitContainer
                   - paths
                   type: object
                 type: array
