feat(root): add function: support loadbalancer

--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
@@ -855,6 +855,10 @@ spec:
               pointToGrayName:
                 description: old grey workload name need modify match selector
                 type: string
+              serviceAnnotation:
+                additionalProperties:
+                  type: string
+                type: object
               serviceMesh:
                 description: check add istio label
                 type: boolean
