feature<root>: generate crd

--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_applicationconfigurations.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_applicationconfigurations.yaml
@@ -235,6 +235,8 @@ spec:
               volumeClaims:
                 items:
                   properties:
+                    accessMode:
+                      type: string
                     hostPath:
                       type: string
                     name:
